--- a/VoteEnligne/src/main/webapp/resources/controle.css
+++ b/VoteEnligne/src/main/webapp/resources/controle.css
@@ -1,20 +1,21 @@
 @CHARSET "UTF-8";
 
 h1 {
-	margin-left:auto;
-    margin-right:auto;
-    font-style:bold;
-    font-size: 90px;
+	margin-left: auto;
+	margin-right: auto;
+	font-style: bold;
+	font-size: 90px;
 }
+
 input[type=button] {
-	margin-top:50px;
+	margin-top: 50px;
 	text-align: center;
-    padding:10px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px; 
-    font-size: 30px;
-    font-weight: bold;
-    width: 300px;
+	padding: 10px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	font-size: 30px;
+	font-weight: bold;
+	width: 300px;
 }
 
 input[type=text] {
@@ -31,37 +32,36 @@ span {
 	color: red;
 }
 
-.voteSessionDiv{
+.voteSessionDiv {
 	text-align: center;
 }
 
-
 .actCell {
-	margin-top:10%;
+	margin-top: 10%;
 	text-align: center;
-    padding:10px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px; 
-    font-size: 20px;
-    font-weight: bold;
-    width: 200px;
+	padding: 10px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	font-size: 20px;
+	font-weight: bold;
+	width: 200px;
 }
 
 .nextActButton {
-	margin-top:30%;
+	margin-top: 30%;
 }
 
 .activeActCell {
-	margin-top:10%;
+	margin-top: 10%;
 	text-align: center;
-    padding:10px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px; 
-    font-size: 20px;
-    font-weight: bold;
-    width: 200px;
-    background:#66a3ff;
-    color:white;
+	padding: 10px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	font-size: 20px;
+	font-weight: bold;
+	width: 200px;
+	background: #66a3ff;
+	color: white;
 }
 
 .actListDiv {
@@ -77,27 +77,38 @@ span {
 }
 
 .button {
-    top: 50%;
+	top: 50%;
 }
 
 .codeInput {
-    margin-top:10%;
+	margin-top: 10%;
 	text-align: center;
-    padding:10px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px; 
-    font-size: 30px;
-    font-weight: bold;
-    width: 300px;
+	padding: 10px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	font-size: 30px;
+	font-weight: bold;
+	width: 300px;
 }
 
 .passwordInput {
-    margin-top:1%;
+	margin-top: 1%;
 	text-align: center;
-    padding:10px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px; 
-    font-size: 30px;
-    font-weight: bold;
-    width: 300px;
+	padding: 10px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	font-size: 30px;
+	font-weight: bold;
+	width: 300px;
+}
+
+.raspberryIpInput {
+	margin-top: 1%;
+	text-align: center;
+	padding: 10px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	font-size: 30px;
+	font-weight: bold;
+	width: 300px;
 }
